--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "cleave.js": "^1.6.0",
     "confirm-dialog": "^0.1.2",
     "notiflix": "^3.2.4",
